@@ -1,3 +1,8 @@
+2004-05-12  Chengye Mao <chengye.geo@yahoo.com>
+        * generic/tkBind.c <HandleEventGenerate>: Modified to fix wish
+        crach due to incorrectly generate <Destroy> event. This bug was
+        reported in comp.lang.tcl but not logged.
+
 2004-05-10  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* win/makefile.vc: Apply fix from tcl bug #950049 for make docs.
